--- a/localisation/CWL_initial_soviet_focus_l_english.yml
+++ b/localisation/CWL_initial_soviet_focus_l_english.yml
@@ -3,10 +3,10 @@ SOV_defeat_in_the_patriotic_war:0 "Defeat in the great patriotic war"
 SOV_defeat_in_the_patriotic_war_desc:0 "It is time we come to accept the reality that we lost in the great patriotic. The embarassment felt through the loss is still felt to this day. It is time that we either move beyond this loss or that we weaponize it against the German oppressor."
 SOV_start_Siberian_plan:0 "Start the Siberian plan"
 SOV_start_Siberian_plan_desc:0 "It is time that we industrialize Siberia instead of wallowing in self pity"
-SOV_Trotsky_wins:0 "Trotsky take over"
-SOV_Trotsky_wins_desc:0 "This was to be expected as Stalin is unpopular and Nobody truely knows or trusts Lebedev"
+SOV_Trotsky_wins:0 "Trotsky's takeover"
+SOV_Trotsky_wins_desc:0 "This was to be expected as Stalin is unpopular and Nobody truly knows or trusts Lebedev"
 SOV_Stalin_wins:0 "Stalin Holds on to power"
-SOV_Stalin_wins_desc:0 "Through cunning and deceit Stalin just barely holds onto power. However Stalin has not yet truely won as protests are growing out of hand and may soon lead to a civil war."
+SOV_Stalin_wins_desc:0 "Through cunning and deceit Stalin just barely holds onto power. However Stalin has not yet truly won as protests are growing out of hand and may soon lead to a civil war."
 SOV_Lebedev_takeover_wins:0 "Sergey Lebedev takes over"
 SOV_Lebedev_takeover_wins_desc:0 "The people have had enough of the Mainstream powers, So they chose Lebedev so that some change might happen. However the people aren't completely behind his rise to power As Sergey is the Head of the NKVD and has many favours to use..."
  
