Patch and added states for Germany

--- a/localisation/CWL_countries_l_english.yml
+++ b/localisation/CWL_countries_l_english.yml
@@ -2461,3 +2461,10 @@ OST_fascism:0 "Reichskommissariat Ostland"
 OST_fascism_DEF:0 "Reichskommissariat Ostland"
 GLI_DEF:0 "German"
 GLI_ADJ:0 "German"
+
+PLF_fascism:0 "Poland"
+PLF_fascism_DEF:0 "The Polish State"
+PLF_DEF:0 "Polish"
+PLF_ADJ:0 "Polish"
+PLF_neutrality:0 "Poland"
+PLF_neutrality_DEF:0 "The Polish Military Junta"
