--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -43,7 +43,7 @@
  STATE_42:0 "Moselland"
  STATE_43:0 "Northern Hungary"
  STATE_44:0 "Albania"
- STATE_45:0 "Vojvodina"
+ STATE_45:1 "North Western Vojvodina"
  STATE_46:0 "Muntenia"
  STATE_47:0 "Attica"
  STATE_48:0 "Sofia"
@@ -821,4 +821,17 @@
  STATE_820:0 "North Sudetenland"
  STATE_821:0 "Southern German Lithuania"
  STATE_822:0 "Northern German lithuania"
- STATE_823:0 "Southern German Lithuania"
+ STATE_823:1 "Srem"
+ STATE_824:0 "Visegrad"
+ STATE_825:1 "Krajina"
+ STATE_826:0 "Donji Kraj"
+ STATE_827:0 "Glaz"
+ STATE_828:0 "Usora"
+ STATE_829:0 "lower Istria"
+ STATE_830:0 "Rijeka"
+ STATE_831:0 "Upper Dalmatia"
+ STATE_832:0 "Lower Slavonia"
+ STATE_833:0 "Novi Sad"
+ STATE_834:0 "Southern Vojvodina"
+ STATE_835:0 "Eastern Vojvodina"
+ STATE_836:0 "Lower Bucovina"
