Chinese update alongside bug fixes
The new Chinese update, as well as new loading screens created by Comrade Ivan

--- a/localisation/CWL_Communist_China_l_english.yml
+++ b/localisation/CWL_Communist_China_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+
 PRC_start_building_arms_sweatshops:0 "Building arms sweatshops"
 PRC_start_building_arms_sweatshops_desc:0 "While our industrial base is lacking, sweatshops should make up for our deficient industrial base."
 PRC_take_guns_from_caches:0 "Take guns from the caches"
@@ -6,10 +7,122 @@ PRC_take_guns_from_caches_desc:0 "We need to grab some guns if we are to survive
 PRC_Allow_dissent:0 "Allow dissent"
 PRC_Allow_dissent_desc:0 "It is imperative that we work together, although at the earliest convenience we shall dispose of them..."
 PRC_the_opium_problem:0 "The opium problem"
-PRC_the_opium_problem_desc:0 "It is time we decide on whether or not we should outlaw opium"
+PRC_the_opium_problem_desc:0 "It is time we outlawed opium once and for all"
 PRC_attack_the_nationalists:0 "Attack the nationalists"
 PRC_attack_the_nationalists_desc:0 "It is time that we "
 PRC_the_first_five_year_plan:0 "Begin the First Five Year plan"
 PRC_the_first_five_year_plan_desc:0 "After the defeat of the nationalists we may begin our first five year plan so that we may ensure that the resources will be utilized."
-space_tooltip:0 "§YWe will begin looking at the Stars and Beyond Know that our Situation at home is Stable§!"
- 
+
+################### AFTER CIVIL WAR ###########################################
+PRC_the_great_leap_forwards:0 "The Great leap Forwards"
+PRC_the_great_leap_forwards_desc:0 "It is time that we industrialize even more and propel China on the world Stage!"
+
+PRC_expansion_of_the_first_five_year_plan:0 "Expansion of The five year plan"
+PRC_expansion_of_the_first_five_year_plan_desc:0 "It is time that we expand our five year plan even further"
+PRC_expropriate_landowners:0 "Expropriate Landowners"
+PRC_expropriate_landowners_desc:0 "Expropriating the Landowners will help get us funds to fuel our industry"
+PRC_new_Railroad_from_Nanjing_to_Beijing:0 "A new Railroad From Nanjing to Beijing"
+PRC_new_Railroad_from_Nanjing_to_Beijing_desc:0 "While not strictly necessary, it shall help us employ everyone"
+PRC_synthetic_oil:0 "Synthetic Oil production"
+PRC_synthetic_oil_desc:0 "To say the the world lacks Oil would be an understatement, We must therefore expand synthetic production at home as Decreed by Mao"
+PRC_expand_ressource_collection_in_Guanxi:0 "Expand resource collection in Guanxi"
+PRC_expand_ressource_collection_in_Guanxi_desc:0 "We need to expand the mines within Guanxi if we are too improve our industry"
+PRC_improved_arms_arsenals:0 "Improved arms Arsenals"
+PRC_improved_arms_arsenals_desc:0 "We need to invest into more arms factories if we are to remain safe from outside incursions"
+PRC_increased_extraction_of_shanxi_coal:0 "Expand the Coal mines in Shanxi"
+PRC_increased_extraction_of_shanxi_coal_desc:0 "We need to expand the Coal mines if we are to fuel our budding industry"
+
+PRC_expansion_of_the_army:0 "Expansion of the Army"
+PRC_expansion_of_the_army_desc:0 "It is time that we show off the strenght of our army by invading Tibet and restoring our borders"
+PRC_expand_shipyards:0 "Expand Shipyards"
+PRC_expand_shipyards_desc:0 "Our Navy is woefully small, we need to rectify this issue immediately"
+PRC_new_weaponery:0 "Updating our weaponry"
+PRC_new_weaponery_desc:0 "We need to get better weapons if we are to avoid the fate of the Qing"
+PRC_updating_our_artillery:0 "Getting newer artillery"
+PRC_updating_our_artillery_desc:0 "We need to update our artillery if we are to survive"
+PRC_a_new_fighter:0 "A new Fighter"
+PRC_a_new_fighter_desc:0 "It is time we start removing our biplanes and begin modernizing our planes"
+PRC_Submarine_focus:0 "Focus on Submarines"
+PRC_Submarine_focus_desc:0 "It is time that we begin producing Submarines as they are cheap yet effective"
+PRC_modernization_of_our_tank_force:0 "A Chinese Tank force"
+PRC_modernization_of_our_tank_force_desc:0 "Tanks are essential to any modern army"
+PRC_focus_on_cavelry:0 "Focus on Cavalry"
+PRC_focus_on_cavelry_desc:0 "While not as advanced as tanks, it is far more practical for our economy"
+
+PRC_begin_cultural_revolution:0 "Begin the cultural revolution"
+PRC_begin_cultural_revolution_desc:0 "It is time we move on and spread the Wisdom of Mao"
+PRC_found_the_red_guard:0 "Found the Red Guard"
+PRC_found_the_red_guard_desc:0 "The red guard shall be helpful to silence our opposition"
+PRC_begin_arrests_of_low_level_officials:0 "Begin arresting low level Officials"
+PRC_begin_arrests_of_low_level_officials_desc:0 "If we are to scare off our opposition we will need to begin by arresting lower officials by slapping them with false corruption"
+PRC_distance_ourselves_from_the_soviet_union:0 "Distance ourselves from the Soviet Union"
+PRC_distance_ourselves_from_the_soviet_union_desc:0 "The soviet Union has betrayed us"
+PRC_closer_ties_with_the_soviet_union:0 "Closer ties With the Soviet Union"
+PRC_closer_ties_with_the_soviet_union_desc:0 "The Soviets have helped us, closer ties would be mutually beneficial"
+PRC_Roundups_in_Beijing:0 "Roundups in Beijing"
+PRC_Roundups_in_Beijing_desc:0 "It is time we begin rounding up corrupt politicians in Beijing"
+PRC_ask_for_mongolia:0 "Ask for Mongolia"
+PRC_ask_for_mongolia_desc:0 "We shall ask the Soviet Union for Mongolia"
+PRC_keep_an_eye_on_Wang_Ming:0 "Keep an eye on Wang Ming"
+PRC_keep_an_eye_on_Wang_Ming_desc:0 "We need to keep an eye On Wang Ming and his potentially subversive links to the Soviet Union"
+
+PRC_the_great_leap_forwards_a_success:0 "The great leap forwards, an unparalleled success!"
+PRC_the_great_leap_forwards_a_success_desc:0 "The great leap forward has succeeded in granting us a revitalized industry"
+PRC_execute_political_opponents:0 "execute political opponents"
+PRC_execute_political_opponents_desc:0 "It is time we get rid of our political opponents once and for all"
+PRC_begin_integrating_Xinjiang:0 "Begin integrating Xinjiang"
+PRC_begin_integrating_Xinjiang_desc:0 "It is time we begin integration of our periphery"
+PRC_looking_out_towards_space:0 "Looking out towards space"
+PRC_looking_out_towards_space_desc:0 "It is time we marched on and helped the Canadians launch humanity into space, However while we are there nobody will notice if a few documents go missing..."
+
+## ideas ##########################
+The_new_chinese_army:0 "The new Chinese army"
+Mass_famines:0 "Mass famines"
+Mass_famines_desc:0 "Our troops are starving, our factory workers are leaving and overall our nation is crumbling"
+
+## events #########################
+
+mod_com_CHI.1.t:0 "China asks for Mongolia"
+mod_com_CHI.1.d:0 "The Chinese ask if we would part with Mongolia"
+mod_com_CHI.1.a:0 "Propose an Mongolian puppet state"
+mod_com_CHI.1.b:0 "Tell them they cannot have Mongolia"
+mod_com_CHI.2.t:0 "The Soviet Government refuses to hand over Mongolia!"
+mod_com_CHI.2.d:0 "It seems that the soviet government has betrayed us and has refused to grant us our rightful claim!"
+mod_com_CHI.2.a:0 "Maybe we chose the wrong allies"
+mod_com_CHI.3.t:0 "The Soviets propose an independent Mongolia"
+mod_com_CHI.3.d:0 "The Soviet Union has proposed an independent in which we would gain access to their resources while Mongolia remains as a buffer state"
+mod_com_CHI.3.a:0 "An acceptable compromise"
+mod_com_CHI.4.t:0 "The Great leap forwards fails!"
+mod_com_CHI.4.d:0 "In a truly shocking turn of events the great leap forwards has catastrophically failed"
+mod_com_CHI.4.a:0 "Terrible"
+mod_com_CHI.5.t:0 "Our country fracturing!"
+mod_com_CHI.5.d:0 "Our political opponents are coming together under Wang Ming to smash our rule, riots and protests are beginning to spread within our country"
+mod_com_CHI.5.a:0 "We should have purged them while we had the Chance"
+mod_com_CHI.6.t:0 "The Second Chinese Civil war"
+mod_com_CHI.6.d:0 "It seems our efforts to contain the revolutionaries has failed, furthermore a military detachment in Yunan has decided to press their claims"
+mod_com_CHI.6.a:0 "lets pray that we survive this"
+
+news.45.t:0 "The second Chinese Civil war"
+news.45.d:0 "A new famine, only exacerbated by the Crystal infestations has spiraled out of the control of the Chinese Government. Many groups dissatisfied by the government have decided to seize on the crisis to try and topple the Chinese government"
+news.45.a:0 "Another civil war in China"
+
+## decisions #########################
+
+PRC_Civil_war:0 "Preparations for the civil war"
+PRC_Sway_troops_to_our_side:0 "Sway troops to our side"
+PRC_aquire_peasents_help:0 "Acquire "help" from our peasants"
+PRC_give_to_peasents:0 "Give back to the peasants"
+
+PRC_the_five_year_plan:0 "The five year plan"
+PRC_Jiangxi_gold:0 "Jiangxi Gold"
+PRC_eastern_seabord:0 "Develop the eastern seabord"
+PRC_Hubei_hunan_changde:0 "Develop Hubei, Hunan and Changde"
+PRC_develop_sichuan:0 "develop Sichuan"
+PRC_expansion_of_Sinkiang:0 "Infrastructure development in Sinkiang"
+PRC_invest_in_western_china:0 "Invest in western China"
+
+## Tooltips #######################
+industrial_1:0 "§YWe will begin expanding our five year plan§!"
+Sinkiang_1:0 "§YLet the Migration commence!§!"
+poll_kill:0 "§YThe time has come to kill of all of the subversives once and for all§!"
+space_tooltip:0 "§YWe will begin looking at the Stars and Beyond Know that our Situation at home is Stable, however we shall cooperate with Canada in our goal of going to space§!"
