Heydrich after civil war content so far
Have not finished localization and am not finished.

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1062,3 +1062,5 @@
  
  BEL_reichskommissariat:0 "Reichskommissariat Belgien Nordfrankreich"
  HOL_reichskommissariat:0 "Reichskommissariat Niederlande"
+
+UKR_reichskommissariat:0 "Reichskommissariat Ukraine"
