--- a/localisation/CWL_countries_l_english.yml
+++ b/localisation/CWL_countries_l_english.yml
@@ -2378,8 +2378,11 @@ SOR_ADJ:0 "Sorbian"
 
 SML_neutrality:0 "Smolensk authority"
 SML_neutrality_DEF:0 "Smolensk authority"
+SML_fascism:0 "Reichskommissariat Moskovien"
+SML_fascism_DEF:0 "Reichskommissariat Moskovien"
 SML_DEF:0 "Russian"
 SML_ADJ:0 "Russian"
+
 
 SDR_neutrality:0 "Silesian Democratic Republic"
 SDR_neutrality_DEF:0 "Silesian Democratic Republic"
