Saving up current Heydrich Content1
Localisation needs to be finished, I am backing up so that I do not lose progress in case my computer dies

--- a/localisation/CWL_countries_l_english.yml
+++ b/localisation/CWL_countries_l_english.yml
@@ -2378,8 +2378,8 @@ SOR_ADJ:0 "Sorbian"
 
 SML_neutrality:0 "Smolensk authority"
 SML_neutrality_DEF:0 "Smolensk authority"
-SML_fascism:0 "Reichskommissariat Moskovien"
-SML_fascism_DEF:0 "Reichskommissariat Moskovien"
+SML_fascism:0 "Reichskommissariat Russland"
+SML_fascism_DEF:0 "Reichskommissariat Russland"
 SML_DEF:0 "Russian"
 SML_ADJ:0 "Russian"
 
