localisation for the first part of the focus tree

--- a/localisation/CWL_Heydrich_SS_Germany_l_english.yml
+++ b/localisation/CWL_Heydrich_SS_Germany_l_english.yml
@@ -1,5 +1,53 @@
 ﻿l_english:
 # Heydrich after civil war 1 focus
+  ALL_the_german_reconquista:0 "Reclaiming our Sphere"
+  ALL_the_german_reconquista_desc:0 "To the horror of Heydrich it = seems that all that Hitler gained was lost. However it is not too late to reconquer it §Rand put the natives in their place"
+  ALL_begin_purging_the_commies:0 "Hunt down the communists"
+  ALL_begin_purging_the_commies)desc:0 "Its time we eradicate the communists §R once and for all"
+  ALL_implement_paganism:0 "Implement paganism"
+  ALL_implement_paganism_desc:0 "the time has come to cast down Christianity and acknowledge its jewish roots. In its stead we shall embrance the ancient religion of our glorious ancestors"
+  ALL_what_to_do_with_the_generals:0 "The generals"
+  ALL_what_to_do_with_the_generals)desc:0 "While most of the generals within the old German reich have been revealed as traitor, we may be able to rehabilitate some of them."
+  ALL_what_to_do_with_Hess:0 "What to do with Rudolf Hess"
+  ALL_what_to_do_with_Hess_desc:0 "To say that Heydirch dislikes hess would be the understatement of the century. However to kill hess would upset the population while sparing him would make him look weak."
+  ALL_to_continue_hitlers_legacy:0 "To continue Hitlers legacy"
+  ALL_to_continue_hitlers_legacy_desc:0 "We shall begin propagandizing and painting Heydrich was the succesor germany needed. We will also continue all censorship against those who are against hitler"
+  ######################################################################
+  ALL_focus_on_rebuilding_our_army:0 "Focus on rebuilding our army"
+  ALL_focus_on_rebuilding_our_army_desc:0 "While our economy is ruined we will repair it by plundering and pillaging all the nations that we conquer"
+  ALL_breakthroughs_in_tanks:0 "Breakthrougs in armored warfare"
+  ALL_breakthroughs_in_tanks_desc:0 "With extensive funding we have managed to achieve great advances in armored warfare."
+  ALL_new_rifles:0 "New rifles"
+  ALL_new_rifles_desc:0 "Its time we updated our entire army and give them new weaponry"
+  ALL_improve_our_planes:0 "Improve our airplanes"
+  ALL_improve_our_planes_desc:0 "We need to upgrade our planes if we are to have any chance of controlling the sky"
+  ALL_encourage_new_aces:0 "Encourage new aces"
+  ALL_encourage_new_aces_desc:0 "For our army to be truly rehabilitated we will not only need to match the former glory of the airforce bu tto exceed it"
+  ALL_rehabilitate_the_image_of_the_wermacht:0 "Rehabilitate the image of the Wermacht"
+  ALL_rehabilitate_the_image_of_the_wermacht_desc:0 "In recent history the German army has been embarrased, following the cowardly retreat from Russia or the civil war itself. The time has come for that to change and for the world to tremble when they hear the name of the Wermacht"
+  ALL_give_generous_priviliges:0 "Hand out genrous priviliges to soldiers"
+  #####################################
+  ALL_focus_on_rebuilding_our_industry:0 "Focus on rebuilding our industrial might"
+  ALL_focus_on_rebuilding_our_industry_desc:0 "An army without equipment cannot win any wars. Therefore we shall begin to try and rebuild our industrial base even if our army organisation will suffer"
+  ALL_improving_our_military_production:0 "Improving military production"
+  ALL_improving_our_military_production_desc:0 "It is time we expanded our military factories instead of resting on our laurels"
+  ALL_more_slaves_to_the_camps:0 "More slaves to the camps"
+  ALL_more_slaves_to_the_camps_desc:0 "Unfortunately our population is ill suited to handle some of the more dangerous taks of industry. We shall replace them by forcing more undesirables and slavs to work in these positions"
+  ALL_massive_improving_our_industrial_tech:0 "New industrial techniques"
+  ALL_massive_improving_our_industrial_tech_desc:0 "It is time we updated techniques in our industries so we can maximize production"
+  ALL_Forced_austerity:0 "Forced austerity"
+  ALL_Forced_austerity_desc:0 "to say that this will be unpleasent for the common worker is an understatement. However it is necessary if our economy is to recover"
+  ALL_Increase_integration_of_the_periphery:0 "Integrate the periphery"
+  ALL_Increase_integration_of_the_periphery_desc:0 "While the periphery of the german state has long eluded The Reich this will soon end when we send in the troops to quash any slavic resistance"
+  ALL_to_banish_want:0 "To banish want"
+  ALL_to_banish_want_desc:0 "Its time we begin to shame glutony and want, by doing so we shall free up important ressources."
+  ############################ end of part 1 ###
+  ALL_take_back_lebensraum:0 "Take back our lebensraum"
+  ALL_take_back_lebensraum_desc:0 "It is time that we reconquered our birthright and §Rcrush the slavs once and for all"
+  ALL_attack_russia:0 "Attack Russia"
+  ALL_attack_russia_desc:0 "It is time we cemented the fate of russia"
+  ALL_lebensraum_is_ours:0 "Lebensraum is ours"
+  ALL_lebensraum_is_ours_desc:0 "We have achieved our goals and the slavs will never rise up ever again"
 
  # ideas #
  ALL_ARMY_SHIT:0 "Recent purge"
