--- a/localisation/CWL_Heydrich_SS_Germany_l_english.yml
+++ b/localisation/CWL_Heydrich_SS_Germany_l_english.yml
@@ -49,6 +49,98 @@
   ALL_lebensraum_is_ours:0 "Lebensraum is ours"
   ALL_lebensraum_is_ours_desc:0 "We have achieved our goals and the slavs will never rise up ever again"
 
+  ############################ FOCUS PART 2 ##########
+  ALL_Heydrichs_Grand_Victory:0 "Heydrichs grand victory"
+  ALL_Heydrichs_Grand_Victory_desc:0 "Heydrich has done the impossible, restore the reich. Not even Hitler managed to take over all of Russia and subjugate all the insolent natives"
+  ALL_Solidify_our_grip_over_Romania:0 "Solidify our grip over Romania"
+  ALL_Solidify_our_grip_over_Romania_desc:0 "The time has come to secure our oil supply so that we may never lose them ever again."
+  ALL_Retrieve_our_scientists:0 "Retrieve our scientists"
+  ALL_Retrieve_our_scientists_desc:0 "It is time we pulled our scientists away from Canada and return them home as only the Aryan should be allowed to go to space"
+  ALL_Crush_the_rebles:0 "Crush the Rebels"
+  ALL_Crush_the_rebles_desc:0 "Most resistance members have been dealt with, all we have to is kill of the rest"
+  ALL_Liberalization:0 "Liberalization?"
+  ALL_Liberalization_desc:0 "Maybe its time we let some party members voice their differing opinions. after all the party is fully under the control of Heydrich"
+  ALL_Let_the_golden_age_begin:0 "Let the golden age begin"
+  ALL_Let_the_golden_age_begin_desc:0 "The 40's and 50's will be the best years of the reich, so let the golden age begin!"
+  ###########################################################
+  ALL_The_german_space_Program:0 "The German space program"
+  ALL_The_german_space_Program_desc:0 "We have brought our Scientists back from Canada, we better set them to work"
+  ALL_Von_Brauns_Genius:0 "Von Brauns genius"
+  ALL_Von_Brauns_Genius_desc:0 "To say that Braun is a genius would be a understatement, with him our space program will increase in leaps and bounds"
+  ALL_Nazi_Space_propaganda:0 "Nazi space propaganda"
+  ALL_Nazi_Space_propaganda_desc:0 "Our people may still be unconvinced that going to space is a worthy adventure"
+  ALL_Baltic_launch_site:0 "Baltic launch site"
+  ALL_Baltic_launch_site_desc:0 "The baltics are a perfect launch site for all our rockets as they are relatively close to the baltic sea allowing our rockets to land safely"
+  ALL_Invest_into_computers:0 "Invest into computers"
+  ALL_Invest_into_computers_desc:0 "Computers will not only help us with our space program but also with civilian life in general"
+  ALL_more_scientists:0 "Hire more scientists"
+  ALL_more_scientists_desc:0 "Its time we got more scientist to speed up the development of our rocket"
+  ALL_ignore_complaints:0 "Ignore the complaints"
+  ALL_ignore_complaints_desc:0 "While many scientists are warning us that the rocket may blow up, the chances look slim and frankly the fuhrer is tired of waiting"
+  ALL_look_into_complaints:0 "Look into complaints"
+  ALL_look_into_complaints_desc:0 "Maybe we should look into the complaint, so as to ensure that there is no chance for the rocket to fail"
+  ALL_launch_the_rocket:0 "Launch the rocket"
+  ALL_launch_the_rocket_desc:0 "The time has come to launch the rocket and prove once and for all that we are superior"
+  ###############################################################
+  ALL_Pull_back_to_the_AA_Line:0 "Pull back to the AA line"
+  ALL_Pull_back_to_the_AA_Line_desc:0 "Holding all of Russia is turning out to be a nightmare. Wether it be the endless partisans or the vast distances makign logistics impossible to maintain. We ahve decided to abondon the useless far east and to concentrate on everything behind the AA line so we can maintain logistics."
+  ALL_The_Peoples_Fuhrer:0 "The peoples Fuhrer"
+  ALL_The_Peoples_Fuhrer_desc:0 "The Fuhrer must help the people first and foremost instead of the party"
+  ALL_Improved_healthcare:0 "Improve healthcare"
+  ALL_Improved_healthcare_desc:0 "It is time we improved our healthcare so that our people can spend less time being hurt and more time working"
+  ALL_benefits_to_mothers:0 "Benefits to mothers"
+  ALL_benefits_to_mothers_desc:0 "The reich needs more babies, Its time we encouraged this by giving benefits to mothers"
+  ALL_peoples_propaganda:0 "The peoples propaganda"
+  ALL_peoples_propaganda_desc:0 "The people are what makes germany great, its time they fealt apreciated"
+  ALL_The_Partys_Fuhrer:0 "The party's Fuhrer"
+  ALL_The_Partys_Fuhrer_desc:0 "The party is what keeps Heydrich in power, not the people. It would only make sense if the Fuhrer focuses on the party instad of the people"
+  ALL_Increase_pay_for_beaurocrats:0 "Increase pay for the bureaucrats"
+  ALL_Increase_pay_for_beaurocrats_desc:0 "While Heydrich may not like them they are necessary for the survival of the Reich"
+  ALL_pay_personal_visits:0 "Pay personal visits"
+  ALL_pay_personal_visits_desc:0 "While it may not be ideal, a personal visit from the Fuhrer goes a long way to help stabalize the Reich"
+  ALL_glorify_party_leaders:0 "Glorify party leaders"
+  ALL_glorify_party_leaders_desc:0 "Its time that we acknowledge all those members who led us to greatness"
+  ALL_The_Military_is_right:0 "The military is right"
+  ALL_The_Military_is_right_desc:0 "While it pains Heydrich to admit that the army is correct and that more money needs to be alocated towards them"
+  ALL_sideline_the_ss:0 "Sideline the SS"
+  ALL_sideline_the_ss_desc:0 "The SS are not an effective fighting force and so must be sidelined in military affairs"
+  ALL_glorify_service:0 "Glorify service in the army"
+  ALL_glorify_service_desc:0 "To serve in the army is to serve the reich. Overall we shall increasingly try to popularize the army"
+  ALL_Organize_A_military_Parade:0 "Organize a military parade"
+  ALL_Organize_A_military_Parade_desc:0 "It is time we organized a military parade to show our might"
+  ALL_The_SS_is_our_friend:0 "The SS are our friends"
+  ALL_The_SS_is_our_friend_desc:0 "The SS watches not only over the enemies of Heydrich but the enemies of the reich at large"
+  ALL_look_into_the_army:0 "Look into the army"
+  ALL_look_into_the_army_desc:0 "look into the army, the army is not above suspicion and must be looked into to root out any traitors"
+  ALL_arrest_suspicious_members:0 "Arrest suspicious members"
+  ALL_arrest_suspicious_members_desc:0 "While we may have liberalized a little bit this does not mean that we will allow treason"
+  ALL_The_ss_secured:0 "The SS secured"
+  ALL_The_ss_secured_desc:0 "The SS have proven themselves loyal to Heydrich, this will no doubt ensure that he will retain his power"
+  ALL_Feggelein_feggelein_feggelein:0 "Fegelein Fegelein Fegelein!"
+  ALL_Feggelein_feggelein_feggelein_desc:0 "Unfortunately Fegelein has proved himself to be a thorn in our side. For now however he remains safe, given the chance however we shall eliminate him"
+  ##############################################################
+  ALL_Building_up_a_military_industrial_complex:0 "Building up a military industrial complex"
+  ALL_Building_up_a_military_industrial_complex_desc:0 "If we are to be ready for any future war we shall need to build up our military industry"
+  ALL_increasing_our_production_capicity:0 "increasing civilian production"
+  ALL_increasing_our_production_capicity_desc:0 "in the last decade we had to sacrifice our consumer goods for the army, perhaps it is time we gave some goods back to civilians to improve quality of life"
+  ALL_give_handsome_benefits:0 "Give out Handsome benefits"
+  ALL_give_handsome_benefits_desc:0 "its time we gave out handsome benefits to all the Ceo's who helped the Reich in its time of need"
+  ALL_The_Fuhrers_army:0 "The Fuhrer's Army"
+  ALL_The_Fuhrers_army_desc:0 "An army made by the Fuhrer for the Fuhrer is the only force equiped to save the Reich"
+  ALL_handout_pensions:0 "Handout pensions"
+  ALL_handout_pensions_desc:0 "With the end of the war with the Russians we have many Homeless veterans. Our new pension plan should help them recover and help improve the Reich"
+  ALL_cut_out_the_army_to_politics_pipeline:0 "Cut the Army to politics pipeline"
+  ALL_cut_out_the_army_to_politics_pipeline_desc:0 "While we may hve continued on Hitlers policy of giving Veterans a position in the government this has proved to be annoying. For it has made our Government bloated and so from now on Heydrich has decided to stop this guarantee"
+  ALL_focus_on_civilian_industry:0 "Focus on civilian industry"
+  ALL_focus_on_civilian_industry_desc:0 "Our civilian industry has languished its time that we improved our civilian industry"
+  ALL_focus_on_military_industry:0 "Focus on the military industry"
+  ALL_focus_on_military_industry_desc:0 "Civilian indusrty does not matter if there is nothing left to protect, Our military industries must be prioritized"
+  ALL_The_German_industrial_boom:0 "The German Industrial Boom"
+  ALL_The_German_industrial_boom_desc:0 "With our massive industry Germany is experiencing a true industrial boom"
+  #################################################################
+  ALL_a_thousand_year_reich:0 "A thousand year Reich"
+  ALL_a_thousand_year_reich_desc:0 "We have succeeded in everything, the future can only go up from here!"
+
  # ideas #
  ALL_ARMY_SHIT:0 "Recent purge"
  ALL_INDUSTRY_BAD_AFTER_CIVIL_WAR:0 "Devastated Industry"
