gfx for heydrich update 1

--- a/localisation/CWL_Heydrich_SS_Germany_l_english.yml
+++ b/localisation/CWL_Heydrich_SS_Germany_l_english.yml
@@ -3,11 +3,11 @@
   ALL_the_german_reconquista:0 "Reclaiming our Sphere"
   ALL_the_german_reconquista_desc:0 "To the horror of Heydrich it = seems that all that Hitler gained was lost. However it is not too late to reconquer it §Rand put the natives in their place"
   ALL_begin_purging_the_commies:0 "Hunt down the communists"
-  ALL_begin_purging_the_commies)desc:0 "Its time we eradicate the communists §R once and for all"
+  ALL_begin_purging_the_commies_desc:0 "Its time we eradicate the communists §R once and for all"
   ALL_implement_paganism:0 "Implement paganism"
   ALL_implement_paganism_desc:0 "the time has come to cast down Christianity and acknowledge its jewish roots. In its stead we shall embrance the ancient religion of our glorious ancestors"
   ALL_what_to_do_with_the_generals:0 "The generals"
-  ALL_what_to_do_with_the_generals)desc:0 "While most of the generals within the old German reich have been revealed as traitor, we may be able to rehabilitate some of them."
+  ALL_what_to_do_with_the_generals_desc:0 "While most of the generals within the old German reich have been revealed as traitor, we may be able to rehabilitate some of them."
   ALL_what_to_do_with_Hess:0 "What to do with Rudolf Hess"
   ALL_what_to_do_with_Hess_desc:0 "To say that Heydirch dislikes hess would be the understatement of the century. However to kill hess would upset the population while sparing him would make him look weak."
   ALL_to_continue_hitlers_legacy:0 "To continue Hitlers legacy"
@@ -25,7 +25,7 @@
   ALL_encourage_new_aces_desc:0 "For our army to be truly rehabilitated we will not only need to match the former glory of the airforce bu tto exceed it"
   ALL_rehabilitate_the_image_of_the_wermacht:0 "Rehabilitate the image of the Wermacht"
   ALL_rehabilitate_the_image_of_the_wermacht_desc:0 "In recent history the German army has been embarrased, following the cowardly retreat from Russia or the civil war itself. The time has come for that to change and for the world to tremble when they hear the name of the Wermacht"
-  ALL_give_generous_priviliges:0 "Hand out genrous priviliges to soldiers"
+  ALL_give_generous_priviliges:0 "Hand out generous priviliges to soldiers"
   #####################################
   ALL_focus_on_rebuilding_our_industry:0 "Focus on rebuilding our industrial might"
   ALL_focus_on_rebuilding_our_industry_desc:0 "An army without equipment cannot win any wars. Therefore we shall begin to try and rebuild our industrial base even if our army organisation will suffer"
